--- a/Fantasy/Fantasy.Shared/Fantasy.Shared.csproj
+++ b/Fantasy/Fantasy.Shared/Fantasy.Shared.csproj
@@ -24,4 +24,8 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.8" />
+  </ItemGroup>
+
 </Project>
