--- a/Fantasy/Fantasy.Frontend/Fantasy.Frontend.csproj
+++ b/Fantasy/Fantasy.Frontend/Fantasy.Frontend.csproj
@@ -36,4 +36,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\Tournaments\" />
+  </ItemGroup>
+
 </Project>
