--- a/Fantasy/Fantasy.Shared/Fantasy.Shared.csproj
+++ b/Fantasy/Fantasy.Shared/Fantasy.Shared.csproj
@@ -12,6 +12,11 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Literals.resx</DependentUpon>
     </Compile>
+    <Compile Update="Resources\Parameters.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Parameters.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +26,10 @@
     <EmbeddedResource Update="Resources\Literals.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Literals.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Resources\Parameters.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Parameters.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
 
